--- a/SlideDownMenu/Base.lproj/Main.storyboard
+++ b/SlideDownMenu/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12118" systemVersion="16C68" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12118" systemVersion="16C68" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="IAW-Lg-nlQ">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -22,24 +22,34 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="AmM-xf-wEq" customClass="SlideDownView" customModule="SlideDownMenu" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="-80" width="375" height="200"/>
+                                <rect key="frame" x="0.0" y="-36" width="375" height="200"/>
                                 <color key="backgroundColor" red="0.80000001190000003" green="1" blue="0.40000000600000002" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="200" id="NGI-Ce-dvn"/>
                                 </constraints>
                             </view>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6nA-rz-h6o">
+                                <rect key="frame" x="171" y="420" width="32" height="30"/>
+                                <state key="normal" title="Next"/>
+                                <connections>
+                                    <segue destination="UTm-uz-XMA" kind="show" id="Y70-O6-ftA"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
+                            <constraint firstItem="6nA-rz-h6o" firstAttribute="centerX" secondItem="AmM-xf-wEq" secondAttribute="centerX" id="H5p-km-J7l"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="6nA-rz-h6o" secondAttribute="bottom" constant="217" id="PTj-Rg-NvL"/>
                             <constraint firstAttribute="trailing" secondItem="AmM-xf-wEq" secondAttribute="trailing" id="dYn-Ud-D2Y"/>
                             <constraint firstItem="AmM-xf-wEq" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" priority="100" constant="-100" id="fL1-XN-gbA"/>
                             <constraint firstItem="AmM-xf-wEq" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="qwv-nC-AYI"/>
                         </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="Wd7-bQ-Euq"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="36" y="38.23088455772114"/>
+            <point key="canvasLocation" x="975.20000000000005" y="38.23088455772114"/>
         </scene>
         <!--Second View Controller-->
         <scene sceneID="4cV-cc-dRp">
@@ -143,7 +153,9 @@
                             <constraint firstItem="XUb-3T-ou8" firstAttribute="height" secondItem="AVn-1R-w5L" secondAttribute="height" id="WVQ-UH-mP0"/>
                         </constraints>
                     </view>
-                    <navigationItem key="navigationItem" id="k78-ib-2gV"/>
+                    <navigationItem key="navigationItem" id="k78-ib-2gV">
+                        <barButtonItem key="leftBarButtonItem" title="Item" id="Qt1-Wm-kcw"/>
+                    </navigationItem>
                     <connections>
                         <outlet property="contentView" destination="XUb-3T-ou8" id="GiA-kT-vcG"/>
                         <outlet property="panGestureRecognizer" destination="OpZ-yQ-QE3" id="Adg-hG-X96"/>
@@ -161,25 +173,25 @@
                     </connections>
                 </panGestureRecognizer>
             </objects>
-            <point key="canvasLocation" x="1768.8" y="49.925037481259373"/>
+            <point key="canvasLocation" x="1998" y="38"/>
         </scene>
         <!--Navigation Controller-->
-        <scene sceneID="1FD-ig-EhT">
+        <scene sceneID="kXL-Ev-S4C">
             <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="BYa-gy-gxV" sceneMemberID="viewController">
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="IAW-Lg-nlQ" sceneMemberID="viewController">
                     <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="hnD-Dl-iKq">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="Huc-ON-xgC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
-                        <segue destination="UTm-uz-XMA" kind="relationship" relationship="rootViewController" id="Xkd-jf-Yc5"/>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="4n4-3I-Z58"/>
                     </connections>
                 </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="0kt-BT-k9M" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="nid-Mi-M0V" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="829.60000000000002" y="49.925037481259373"/>
+            <point key="canvasLocation" x="36" y="38.23088455772114"/>
         </scene>
     </scenes>
 </document>
